<resources>
    <string name="app_name">Money Manager</string>
    <string name="settings_activity_title">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer Menu -->
    <string name="drawer_menu_budget">Budget</string>
    <string name="drawer_menu_debt">Debts</string>
    <string name="drawer_menu_transactions">Transactions</string>
    <string name="drawer_menu_categories">Categories</string>
    <string name="drawer_menu_accounts">Accounts</string>
    <string name="drawer_menu_cloud_backup">Cloud Backup</string>
    <string name="drawer_menu_export">Import / Export</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_about">About</string>

    <!-- TransactionsBSDF -->
    <string name="tbsdf_memo_hint">Memo (required)</string>
    <string name="html_legacy_mdi_help">&#xF02D6;</string>
    <string name="placeholder_currency">AAA</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_decimal">.</string>
    <string name="category_placeholder">\?</string>

    <!-- Confirm exit dialogs -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- TransactionsFragment RV -->
    <string name="placeholder_amount">9999999.99</string>
    <string name="placeholder_percent">(999999.9%)</string>
    <string name="placeholder_memo">dinner @ kopitiam blah blah blah blah blah. I\'m going to make it super long.</string>
    <string name="rv_item_transactions_day_header_income_hint">Income:</string>
    <string name="rv_item_transactions_day_header_expenses_hint">Expenses:</string>

    <!-- Menu items -->
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_search">Search</string>
    <string name="menu_toggle_view">Toggle View</string>
    <string name="menu_select_month">Select Month</string>
    <string name="menu_add_ellipsis">Add…</string>

    <string name="mdi_chevron_right">&#xF0142;</string>
    <string name="mdi_chevron_left">&#xF0141;</string>

    <!-- fragment_transaction_edit -->
    <string name="hint_type">Type</string>
    <string name="hint_account">Account</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_amount_home">Amount\n(Home)</string>
    <string name="hint_time">Time</string>
    <string name="hint_memo">Memo</string>
    <string name="hint_colon">:</string>

    <!-- fragment_category_edit / fragment_account_edit -->
    <string name="hint_category_name">Category Name</string>
    <string name="hint_icon_id">Icon ID</string>
    <string name="hint_colour">Colour</string>
    <string name="hint_account_name">Account Name</string>

    <!-- ll_item_detail_type_no_data -->
    <string name="nothing_to_show">Nothing to show</string>

    <!-- fragment_budget_edit -->
    <string name="spinner_hint_currency">Currency</string>
    <string name="hint_monthly_budget">Monthly Budget</string>

    <!-- fragment_import_export -->
    <string name="import_export_no_active_tasks">No active tasks</string>
    <string name="import_export_loading_text">Please wait</string>
    <string name="button_export_to_storage">Export To Storage</string>
    <string name="button_import_from_storage">Import From Storage</string>

    <!-- fragment_cloud -->
    <string name="button_upload_data_to_cloud">Upload Data To Cloud</string>
    <string name="button_delete_cloud_data">Delete Cloud Data</string>
    <string name="no_cloud_data_found">No cloud data found</string>

    <!-- fragment_title -->
    <string name="title_tv_initial_progress">[…, …, …]</string>
    <string name="title_tv_progress">[%1$s, %2$s, %3$s]</string>
    <string name="title_tv_final_progress">[OK, OK, OK]</string>

    <!-- action_mode -->
    <string name="action_mode_batch_delete_transactions">Delete the selected transactions?</string>
    <string name="action_mode_batch_delete_budgets">Delete the selected budgets?</string>
    <string name="action_mode_batch_delete_categories_title">Delete the selected categories?</string>
    <string name="action_mode_batch_delete_categories_message">Their budgets and transactions will not be deleted.</string>
    <string name="action_mode_batch_delete_accounts_title">Delete the selected accounts?</string>
    <string name="action_mode_batch_delete_accounts_message">Their transactions will not be deleted.</string>

    <!-- nav_header_main -->
    <string name="nav_header_guest_account">Guest Account</string>
    <string name="nav_header_click_here_to_claim_account">Click here to claim account</string>

    <!-- dialog_about -->
    <string name="dialog_about_version">Version %s</string>
    <string name="dialog_about_releases">Find new releases at:\nhttps://github.com/jackykwe/money-manager-release/releases</string>

</resources>