<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">
    <group
        android:id="@+id/menuGroupFragments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/transactionsFragment"
            android:icon="@drawable/mdi_file_excel"
            android:title="@string/drawer_menu_transactions" />
        <item
            android:id="@+id/budgetsFragment"
            android:icon="@drawable/mdi_file_excel"
            android:title="@string/drawer_menu_budget" />
        <item
            android:id="@+id/debtFragment"
            android:icon="@drawable/mdi_file_excel"
            android:title="@string/drawer_menu_debt" />
    </group>

    <group
        android:id="@+id/menuGroupSubSettings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/categoriesFragment"
            android:icon="@drawable/mdi_package"
            android:title="@string/drawer_menu_categories" />
        <item
            android:id="@+id/accountsFragment"
            android:icon="@drawable/mdi_credit_card"
            android:title="@string/drawer_menu_accounts" />
    </group>

    <group
        android:id="@+id/menuGroupSettings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/cloudFragment"
            android:icon="@drawable/mdi_cloud_upload"
            android:title="@string/drawer_menu_cloud_backup" />
        <item
            android:id="@+id/importExportFragment"
            android:icon="@drawable/mdi_swap_vertical"
            android:title="@string/drawer_menu_export" />
        <item
            android:id="@+id/menuSettings"
            android:icon="@drawable/mdi_cog"
            android:title="@string/drawer_menu_settings" />
        <item
            android:id="@+id/menuLogout"
            android:icon="@drawable/mdi_logout_variant"
            android:title="@string/drawer_menu_logout" />
        <item
            android:id="@+id/menuAbout"
            android:icon="@drawable/mdi_information_outline"
            android:title="@string/drawer_menu_about" />
    </group>
</menu>
