<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="transaction"
            type="com.kaeonx.moneymanager.userrepository.domain.Transaction" />
        <variable
            name="onClickListener"
            type="com.kaeonx.moneymanager.fragments.transactions.TransactionOnClickListener" />
    </data>

    <LinearLayout
        android:id="@+id/transactionLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:onClick="@{() -> onClickListener.onClick(transaction)}"
        android:padding="8dp">

        <FrameLayout
            android:id="@+id/CategoryIconFL"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:padding="0dp">

            <include
                android:id="@+id/categoryIconInclude"
                app:iconDetail="@{transaction.toIconDetail()}"
                layout="@layout/icon_transaction" />
        </FrameLayout>

        <TextView
            android:id="@+id/transactionMemoTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:singleLine="true"
            android:text="@{transaction.memo}"
            android:textSize="14sp"
            tools:text="@string/placeholder_memo" />

        <TextView
            android:id="@+id/transactionCurrencyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp"
            android:text="@{transaction.originalCurrency}"
            android:textSize="12sp"
            app:transactionCurrencyTV_visibility="@{transaction}"
            tools:ignore="RtlSymmetry"
            tools:text="@string/placeholder_currency" />

        <TextView
            android:id="@+id/transactionValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{transaction.originalAmount}"
            android:textSize="14sp"
            tools:text="@string/placeholder_amount" />
    </LinearLayout>
</layout>
