<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kaeonx.moneymanager.fragments.transactions.TransactionsBSDFViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tbsdRootCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/tbsdBT7"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`7`)}"
            android:text="@string/button_7"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBT4"
            app:layout_constraintEnd_toStartOf="@+id/tbsdBT8"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbsdMemoET"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/tbsdBT1"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`1`)}"
            android:text="@string/button_1"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBTDecimal"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT4"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT4"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT4" />

        <Button
            android:id="@+id/tbsdBTDecimal"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`.`)}"
            android:text="@string/button_decimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT1"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT1"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT1" />

        <Button
            android:id="@+id/tbsdBT4"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`4`)}"
            android:text="@string/button_4"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBT1"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT7"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT7"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT7" />

        <Button
            android:id="@+id/tbsdBT8"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`8`)}"
            android:text="@string/button_8"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBT5"
            app:layout_constraintEnd_toStartOf="@+id/tbsdBT9"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toEndOf="@+id/tbsdBT7"
            app:layout_constraintTop_toTopOf="@+id/tbsdBT7"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/tbsdBT5"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`5`)}"
            android:text="@string/button_5"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBT2"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT8"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT8"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT8" />

        <Button
            android:id="@+id/tbsdBT2"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`2`)}"
            android:text="@string/button_2"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBT0"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT5"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT5"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT5" />

        <Button
            android:id="@+id/tbsdBT0"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`0`)}"
            android:text="@string/button_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT2"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT2"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT2" />

        <Button
            android:id="@+id/tbsdBT9"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`9`)}"
            android:text="@string/button_9"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBT6"
            app:layout_constraintEnd_toStartOf="@+id/tbsdBTDateTime"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toEndOf="@+id/tbsdBT8"
            app:layout_constraintTop_toTopOf="@+id/tbsdBT7"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/tbsdBTBackspace"
            style="@style/TBSDFButton.Icon"
            android:onClick="@{() -> viewModel.backspacePressed()}"
            android:onLongClick="@{() -> viewModel.backspaceLongPressed()}"
            android:text="@{viewModel.backspaceBTText}"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT3"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT3"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT3"
            tools:text="&#xF0001;" />

        <Button
            android:id="@+id/tbsdBT6"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`6`)}"
            android:text="@string/button_6"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBT3"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT9"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT9"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT9" />

        <Button
            android:id="@+id/tbsdBT3"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.digitDecimalPressed(`3`)}"
            android:text="@string/button_3"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBTBackspace"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBT6"
            app:layout_constraintStart_toStartOf="@+id/tbsdBT6"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBT6" />

        <Button
            android:id="@+id/tbsdBTDateTime"
            style="@style/TBSDFButton"
            android:text="@{viewModel.dateTimeBTText}"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBTPlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/tbsdBT9"
            app:layout_constraintTop_toTopOf="@+id/tbsdBT7"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="0003\n030520" />

        <Button
            android:id="@+id/tbsdBTMinus"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.operatorPressed(`-`)}"
            android:text="@string/button_minus"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBTDateTime"
            app:layout_constraintStart_toEndOf="@+id/tbsdBTPlus"
            app:layout_constraintTop_toTopOf="@+id/tbsdBTPlus" />

        <Button
            android:id="@+id/tbsdBTDivide"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.operatorPressed(`÷`)}"
            android:text="@string/button_divide"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBTDateTime"
            app:layout_constraintStart_toEndOf="@+id/tbsdBTMultiply"
            app:layout_constraintTop_toTopOf="@+id/tbsdBTMultiply" />

        <Button
            android:id="@+id/tbsdBTMultiply"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.operatorPressed(`×`)}"
            android:text="@string/button_multiply"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBTSubmit"
            app:layout_constraintEnd_toStartOf="@+id/tbsdBTDivide"
            app:layout_constraintStart_toEndOf="@+id/tbsdBT3"
            app:layout_constraintStart_toStartOf="@+id/tbsdBTPlus"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBTPlus" />

        <Button
            android:id="@+id/tbsdBTSubmit"
            style="@style/TBSDFButton.Icon"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.submitBTOnClick()}"
            android:text="@{viewModel.submitBTText}"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tbsdBTDateTime"
            app:layout_constraintStart_toStartOf="@+id/tbsdBTMultiply"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBTMultiply"
            tools:text="&#xF0001;" />

        <Button
            android:id="@+id/tbsdBTPlus"
            style="@style/TBSDFButton"
            android:enabled="@{viewModel.error == null ? true : false}"
            android:onClick="@{() -> viewModel.operatorPressed(`+`)}"
            android:text="@string/button_plus"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tbsdBTMultiply"
            app:layout_constraintEnd_toStartOf="@+id/tbsdBTMinus"
            app:layout_constraintStart_toStartOf="@+id/tbsdBTDateTime"
            app:layout_constraintTop_toBottomOf="@+id/tbsdBTDateTime" />

        <com.kaeonx.moneymanager.customclasses.ClearFocusEditText
            android:id="@+id/tbsdMemoET"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="Memo (required)"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:nextFocusDown="@id/tbsdAmountTV"
            android:paddingVertical="4dp"
            android:paddingStart="8dp"
            android:text="@={viewModel.memoText}"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tbsdCurrencyTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbsdFL"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tbsdPendingAmtTV"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@{viewModel.pendingAmtTVText}"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:visibility="@{viewModel.error == null ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toStartOf="@+id/endPadding"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tbsdPendingOpTV"
            app:layout_constraintTop_toTopOf="@+id/tbsdMemoET"
            tools:ignore="RtlSymmetry"
            tools:text="0.01" />

        <View
            android:id="@+id/endPadding"
            android:layout_width="8dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tbsdPendingAmtTV"
            app:layout_constraintTop_toTopOf="@+id/tbsdMemoET" />

        <TextView
            android:id="@+id/tbsdPendingOpTV"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="2dp"
            android:text="@{viewModel.pendingOpTVText}"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:visibility="@{viewModel.error == null ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toStartOf="@+id/tbsdPendingAmtTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tbsdAmountTV"
            app:layout_constraintTop_toTopOf="@+id/tbsdMemoET"
            tools:text="+" />

        <TextView
            android:id="@+id/tbsdCurrencyTV"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/placeholder_currency"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:visibility="@{viewModel.error == null ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toStartOf="@+id/tbsdAmountTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tbsdMemoET"
            app:layout_constraintTop_toTopOf="@+id/tbsdMemoET" />

        <TextView
            android:id="@+id/tbsdAmountTV"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@={viewModel.amountTVText}"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/tbsdPendingOpTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tbsdCurrencyTV"
            app:layout_constraintTop_toTopOf="@+id/tbsdMemoET"
            tools:text="1.11" />


        <FrameLayout
            android:id="@+id/tbsdFL"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/tbsdHorizontalBarIVTop"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="top"
                android:layout_marginTop="12dp"
                android:scaleType="fitXY"
                android:tint="@color/grey_500"
                app:srcCompat="@drawable/basic_rectangle"
                app:tbsdHorizontalBarIVTop_tint="@{viewModel.currentTransaction.toIconDetail().iconRingColourString}" />

            <ImageView
                android:id="@+id/tbsdHorizontalBarIVBottom"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="12dp"
                android:scaleType="fitXY"
                android:tint="@color/grey_500"
                app:srcCompat="@drawable/basic_rectangle"
                app:tbsdHorizontalBarIVBottom_tint="@{viewModel.currentTransaction.toIconDetail().iconBGColourString}" />

            <FrameLayout
                android:id="@+id/tbsdIconFL"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp">

                <include
                    android:id="@+id/tbsdIconInclude"
                    layout="@layout/icon_transaction"
                    app:iconDetail="@{viewModel.currentTransaction.toIconDetail()}" />
            </FrameLayout>

            <TextView
                android:id="@+id/tbsdAccountTV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="top"
                android:layout_marginStart="136dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center_vertical"
                android:text="@{viewModel.currentTransaction.account}"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tbsdCategoryTV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="136dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/fira_sans"
                android:gravity="center_vertical"
                android:text="@{viewModel.currentTransaction.category}"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tbsdTypeTV"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="144dp"
                android:layout_marginBottom="12dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/material_design_icons"
                android:gravity="center"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="&#xF0BA6;"
                android:textColor="@color/white" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
